	  coming to arrest you. People calling guards only yell if they can talk.
	  If there are no guards in the area, people will call for help instead
	  of calling guards. Guards are no longer called in dungeons, and people
	  will not yell for them in such places. This should fix bug #3186715
	  "SI: Automatons in MoF call guards (1.5.0svn)".

2012-12-29	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Only heal more than 1 hp through mend_hourly if the npc's
	  schedule is sleep.
	  Fix freezing check. Temp of 50 should do damage
	  Allow starving party members to regain health over time if below 0 hp.
	* npctime.cc: Only wake up npcs over time if they have 1 or more hp. (was 0)
	  Do hunger damage check every minute. Hunger does 1 damage instead of 0-2.
	* actors.cc, npctime.cc, Stats_gump.cc: Fix hunger check. Food <= 9 is bad

2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.*: Fixed incorrect calling of ES if mapedit was still on when
	  Exult is closed (caused by rev #7236).

2012-12-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Gump_manager.cc: Fixing previous fix to not delete gumps when you
	  want to move them.
	* combat.cc: Fixed bug #3594342 "Attacking through walls and doors" by using
	  a center-to-center LOF check.
	* actor.cc: The above fix made apparent a bug that allows party members to
	  cause each other o step through walls and doors by moving aside. Since I
	  haven't isolated the circumstances that cause this, and since it is only
	  likely to happen while in combat, I disabled moving aside while in combat
	  as a workaround (the rationale being that you are too busy fighting to
	  play nice).
	Rev 7230:
	* combat.cc: Reverted changes from rev 7229 to fix bug #3598684 "problems
	  attacking medium and large actors (7229 regression)".
	* paths.cc: Speed improvements for Fast_pathfinder_client::is_grabable.
	  Fast_pathfinder_client::is_straight_path will no longer prematurely quit